--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ target/
 # Admin/src/main/resources/application-dev.yml & User/src/main/resources/application-dev.yml
 application-dev.yml
 
+# README
+README.md
 
 ### STS ###
 .apt_generated
