--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,13 @@
             <version>${aliyun.sdk.oss}</version>
         </dependency>
 
+        <!-- springDoc-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
     </dependencies>
 
 
