API docs OK, fix great bugs

--- a/Admin/src/main/resources/application.yml
+++ b/Admin/src/main/resources/application.yml
@@ -115,4 +115,4 @@ management:
 springdoc:
   # swagger
   swagger-ui:
-    path: api.html # http://localhost:8085/api.html
+    path: admin.html # http://localhost:8085/admin.html
