--- a/Guest/pom.xml
+++ b/Guest/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>User</artifactId>
+    <artifactId>Guest</artifactId>
     <name>Guest</name>
     <description>Guest客户(对应移动端前端)模块</description>
 
