--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>${jjwt.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
         <!--aspectj-->
         <dependency>
             <groupId>org.aspectj</groupId>
