--- a/Guest/src/main/resources/application.yml
+++ b/Guest/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
   main:
 
     allow-circular-references: true # 允许循环引用
+    allow-bean-definition-overriding: true # 允许覆盖bean定义
     lazy-initialization: true # 开启懒加载
 
   # MySQL
