--- a/Admin/src/main/resources/application.yml
+++ b/Admin/src/main/resources/application.yml
@@ -16,12 +16,30 @@ spring:
 
   # MySQL
   datasource:
-    # druid
+
+    # dataSource
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: ${eduexch.datasource.driver-class-name}
     url: jdbc:mysql://${eduexch.datasource.host}:${eduexch.datasource.port}/${eduexch.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: ${eduexch.datasource.username}
     password: ${eduexch.datasource.password}
+
+    # druid
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      filters: stat,wall,log4j
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 
   # Redis
@@ -87,16 +105,13 @@ logging:
 eduexch:
 
   # JWT
+  # 管理员端使用简单JWT + 半明文传输
   jwt:
     # Admin
     admin-secret-key: nothing    # 设置jwt签名加密时使用的秘钥
     admin-ttl: 86400000 # 设置jwt过期时间: 一天 : 86400000
     admin-token-name: token    # 设置前端传递过来的令牌名称
 
-    # User
-    user-secret-key: anything
-    user-ttl: 86400000 # 设置jwt过期时间: 一天 : 86400000
-    user-token-name: auth
 
   # AliOSS
   alioss:
