--- a/Guest/src/main/resources/application.yml
+++ b/Guest/src/main/resources/application.yml
@@ -16,15 +16,33 @@ spring:
 
   # MySQL
   datasource:
-    # druid
+
+    # dataSource
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: ${eduexch.datasource.driver-class-name}
     url: jdbc:mysql://${eduexch.datasource.host}:${eduexch.datasource.port}/${eduexch.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: ${eduexch.datasource.username}
     password: ${eduexch.datasource.password}
 
+    # druid
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      filters: stat,wall,log4j
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
-  # Redis
+
+    # Redis
   data:
     redis:
       host: ${eduexch.redis.host}
@@ -86,17 +104,7 @@ logging:
 # 自定义
 eduexch:
 
-  # JWT
-  jwt:
-    # Admin
-    admin-secret-key: nothing    # 设置jwt签名加密时使用的秘钥
-    admin-ttl: 7200000 # 设置jwt过期时间
-    admin-token-name: token    # 设置前端传递过来的令牌名称
-
-    # User
-    user-secret-key: anything
-    user-ttl: 7200000
-    user-token-name: auth
+  # 没有使用JWT, 采用更高规格的加密手段
 
   # AliOSS
   alioss:
