--- a/Admin/src/main/resources/application.yml
+++ b/Admin/src/main/resources/application.yml
@@ -93,11 +93,10 @@ mybatis-plus:
 # 日志配置
 logging:
   level:
-    com:
-      eduexch:
-        mapper: debug #mybatis日志
-        service: info   #service日志
-        controller: info  #controller日志
+    com.eduexch:
+      mapper: debug #mybatis日志
+      service: debug   #service日志 test
+      controller: info  #controller日志 test
   pattern:
     dateformat: mm:ss.SSS
 
