--- a/Guest/src/main/resources/application.yml
+++ b/Guest/src/main/resources/application.yml
@@ -96,8 +96,8 @@ logging:
     com:
       eduexch:
         mapper: debug #mybatis日志
-        service: info   #service日志
-        controller: info  #controller日志
+        service: debug   #service日志 test
+        controller: info  #controller日志 test
   pattern:
     dateformat: mm:ss.SSS
 
