--- a/Guest/src/main/resources/application.yml
+++ b/Guest/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
 
     # dataSource
     type: com.alibaba.druid.pool.DruidDataSource
+
     driver-class-name: ${eduexch.datasource.driver-class-name}
     url: jdbc:mysql://${eduexch.datasource.host}:${eduexch.datasource.port}/${eduexch.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: ${eduexch.datasource.username}
@@ -42,13 +43,14 @@ spring:
       connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 
-    # Redis
+  # Redis
   data:
     redis:
       host: ${eduexch.redis.host}
       port: ${eduexch.redis.port}
       password: ${eduexch.redis.password}
       database: ${eduexch.redis.database}
+
       lettuce:
         pool:
           max-active: 10
@@ -56,6 +58,30 @@ spring:
           min-idle: 1
           time-between-eviction-runs: 10s
       timeout: 20000            # 超时时间: 20s
+
+  # RabbitMQ
+  rabbitmq:
+    host: ${eduexch.rabbitmq.host}
+    username: ${eduexch.rabbitmq.username}
+    password: ${eduexch.rabbitmq.password}
+    virtual-host: ${eduexch.rabbitmq.virtual-host}
+    port: ${eduexch.rabbitmq.port}
+
+    listener:
+      simple:
+        concurrency: 10
+        max-concurrency: 10
+        prefetch: 1
+        auto-startup: true
+        default-requeue-rejected: true
+
+    template:
+      retry:
+        enabled: true
+        initial-interval: 1000ms
+        max-attempts: 3
+        max-interval: 10000ms
+        multiplier: 1
 
 
   #文件上传
@@ -96,9 +122,9 @@ logging:
   level:
     com:
       eduexch:
-        mapper: debug #mybatis日志
-        service: debug   #service日志 test
-        controller: info  #controller日志 test
+        mapper: info  #mybatis日志
+        service: info   #service日志
+        controller: info  #controller日志
   pattern:
     dateformat: mm:ss.SSS
 
