ZEN 6 发送逻辑完成测试, MQ创建

--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,7 @@
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
+                    <include>**/*.lua</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
@@ -273,6 +274,7 @@
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
+                    <include>**/*.lua</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
