--- a/Guest/src/main/resources/application.yml
+++ b/Guest/src/main/resources/application.yml
@@ -119,12 +119,11 @@ mybatis-plus:
 
 # 日志配置
 logging:
+
   level:
-    com:
-      eduexch:
-        mapper: info  #mybatis日志
-        service: info   #service日志
-        controller: info  #controller日志
+    com.shop:
+      DEBUG
+
   pattern:
     dateformat: mm:ss.SSS
 
